switch to hooks and react-virtual

--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -169,13 +169,22 @@ highlighted index only re-renders the components that need the change.
 > **OPTIMIZATIONS** and not to be applied in every case. They're hard to get
 > right and easy to mess up and create bugs!
 
-### 2. 💯 Memoize the Downshift component
+### 2. 💯 pass only primitive values
 
 [Production deploy](https://react-performance.netlify.app/isolated/final/03.extra-2.js)
 
-This one's a little trickier, but the Downshift library is not using
-`React.memo` or `PureComponent`. See if you can figure out how to optimize it
-anyway.
+Wouldn't it be even better to not have to provide our custom memoization
+comparator function and still get the perf gains? Definitely! So an alternative
+approach is to pass the pre-computed values for `isSelected` and `isHighlighted`
+to our `ListItem`. That way they are primitive values and we can take advantage
+of React's built-in comparison function and remove ours altogether.
+
+The additional benefit to this is when you select an item, only the selected
+item needs a re-render.
+
+So for this extra credit, try to accept an `isSelected` and `isHighlighted` prop
+to `ListItem` so you don't have to pass the frequently changing values for
+`selectedItem` and `highlightedIndex`.
 
 ## 🦉 Elaboration and Feedback
 
