--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -1,11 +1,11 @@
-# Window large lists with react-window
+# Window large lists with react-virtual
 
-> NOTE: We're going to be using a library called `react-window`. Some of you may
-> have used this before and others may not have used it or anything else like
-> it. I normally like to build up to abstractions like this one by building a
-> simple version of the abstraction ourselves, but if we did that, we'd be here
-> all day. Implementing this is nontrivial, so try to focus on the concepts even
-> though we're using a library.
+> NOTE: We're going to be using a library called `react-virtual`. Some of you
+> may have used this before and others may not have used it or anything else
+> like it. I normally like to build up to abstractions like this one by building
+> a simple version of the abstraction ourselves, but that would be a workshop
+> entirely to itself! Implementing this is nontrivial, so try to focus on the
+> concepts even though we're using a library.
 
 ## Background
 
@@ -42,14 +42,14 @@ doing this "lazy" just-in-time rendering.
 This is a concept called "windowing" and in some cases it can really speed up
 your components that render lots of data. There are various libraries in the
 React ecosystem for solving this problem. My personal favorite is called
-`react-window`. Here's an example of how you would adapt a list to use
-`react-window`'s `FixedSizeList` component:
+`react-virtual`. Here's an example of how you would adapt a list to use
+`react-virtual`'s `useVirtual` hook:
 
 ```jsx
 // before
 function MyListOfData({items}) {
   return (
-    <ul>
+    <ul style={{height: 300}}>
       {items.map(item => (
         <li key={item.id}>{item.name}</li>
       ))}
@@ -61,37 +61,49 @@ function MyListOfData({items}) {
 ```jsx
 // after
 function MyListOfData({items}) {
+  const listRef = React.useRef()
+  const rowVirtualizer = useVirtual({
+    size: items.length,
+    parentRef: listRef,
+    estimateSize: React.useCallback(() => 20, []),
+    overscan: 10,
+  })
+
   return (
-    <ul>
-      <FixedSizeList
-        width={300}
-        height={300}
-        itemCount={items.length}
-        itemSize={20}
-        itemData={{items}}
-      >
-        {ListItem}
-      </FixedSizeList>
+    <ul ref={listRef} style={{display: 'relative', height: 300}}>
+      <li style={{height: totalHeight}} />
+      {rowVirtualizer.virtualItems.map(({index, size, start}) => {
+        const item = items[index]
+        return (
+          <li
+            key={item.id}
+            style={{
+              position: 'absolute',
+              top: 0,
+              left: 0,
+              width: '100%',
+              height: size,
+              transform: `translateY(${start}px)`,
+            }}
+          >
+            {item.name}
+          </li>
+        )
+      })}
     </ul>
   )
-}
-
-function ListItem({data, style, index}) {
-  const {items} = data
-  return <li style={style}>{items[index].name}</li>
 }
 ```
 
 In summary, rather than iterating over all the items in your list, you simply
-tell `FixedSizeList` how many rows are in your list, what size they are, and
-then it will render the `ListItem` (the component you pass as the children prop)
-that number of times with that amount of space, but it will do so lazily. You
-can provide your own `itemData` which will be passed to your `ListItem`
-component as the `data` prop.
+tell `useVirtual` how many rows are in your list, give it a callback that it can
+use to determine what size they each should be, and then it will give you back
+`virtualRows` and a `totalHeight` which you can then use to only render the
+items the user should be able to see within the window.
 
-react-window has some really awesome capabilities for all sorts of lists
-(including variable sizes and grids). Definitely give it a look to speed up your
-lists.
+[react-virtual](https://github.com/tannerlinsley/react-virtual) has some really
+awesome capabilities for all sorts of lists (including variable sizes and
+grids). Definitely give it a look to speed up your lists.
 
 ## Exercise
 
@@ -113,7 +125,7 @@ need to do. You need to window this stuff! Run less code, and speed up your
 component.
 
 Note that 💰 Marty the Money Bag has done a tiny bit of work for you that's
-specific to how you integrate Downshift and react-window. He's done a good job
+specific to how you integrate Downshift and react-virtual. He's done a good job
 documenting what he's done so you can read about the changes he made if you
 want. 🐨 Kody the Koala Bear will be there to help you know what changes you
 need to make. Good luck!
@@ -122,7 +134,7 @@ need to make. Good luck!
 
 <div>
 <span>After the instruction, if you want to remember what you've just learned, then </span>
-<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=04%3A%20Window%20large%20lists%20with%20react-window&em=">
+<a rel="noopener noreferrer" target="_blank" href="https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=04%3A%20Window%20large%20lists%20with%20react-virtual&em=">
   fill out the elaboration and feedback form.
 </a>
 </div>
