recoil from recoil

--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -43,6 +43,12 @@ For more on this, you can read my blogpost
 > the data they actually _do_ consume changes. That said, colocating state has
 > some maintenance benefits so I wouldn't recommend just putting all of your
 > state in MobX either.
+>
+> Another (newer) alternative to MobX is [Recoil](https://recoiljs.org/) which
+> solves some pretty narly performance issues. I recommend giving
+> [the intro video a watch](https://www.youtube.com/watch?v=_ISAA_Jt9kI) and
+> experimenting with it for complex state management situations for which it is
+> well suited.
 
 ## Exercise
 
@@ -123,10 +129,6 @@ optimization in more places.
 
 > NOTE: this is effectively what react-redux's `connect` higher order component
 > does.
-
-### 4. 💯 use recoil
-
-[Production deploy](https://react-performance.netlify.app/isolated/final/05.extra-4.js)
 
 ## 🦉 Elaboration and Feedback
 
