--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -41,7 +41,7 @@ Please read more about this in my blog post:
 
 Let's look at an example to learn how this works. You can pull this example up
 at
-[localhost:3000/isolated/examples/unnecessary-rerenders](http://localhost:3000/isolated/examples/unnecessary-rerenders)
+[localhost:3000/isolated/examples/unnecessary-rerenders.js](http://localhost:3000/isolated/examples/unnecessary-rerenders.js)
 (and feel free to play with it in `src/examples/unnecessary-rerenders.js`). Pull
 this up and profile it with the React DevTools.
 
