--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -22,12 +22,8 @@ Every time the `<CountProvider />` is re-rendered, the `value` is brand new, so
 even though the `count` value itself may stay the same, all component consumers
 will be re-rendered.
 
-This can be problematic in certain scenarios. You can read more about this here:
-https://github.com/kentcdodds/kentcdodds.com/blob/319db97260078ea4c263e75166f05e2cea21ccd1/content/blog/how-to-optimize-your-context-value/index.md
-
-> I wrote about this but it was a little confusing so it's no longer published,
-> that's why I'm giving you a link to the original blog post content on GitHub
-> 😅
+This can be problematic in certain scenarios. You can
+[read more about this here](https://github.com/kentcdodds/kentcdodds.com/blob/319db97260078ea4c263e75166f05e2cea21ccd1/content/blog/how-to-optimize-your-context-value/index.md).
 
 The quick and easy solution to this problem is to memoize the value that you
 provide to the context provider:
