improve component names and some instructions

--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -45,10 +45,17 @@ Production deploys:
 - [Exercise](https://react-performance.netlify.app/isolated/exercise/05.js)
 - [Final](https://react-performance.netlify.app/isolated/final/05.js)
 
-After we fixed the previous performance problem, our 👨‍💼 product manager noticed
-another performance problem. Whenever you click on the "force render" button
-it's slow. See if you can figure out why and fix that by memoizing the context
-value.
+This exercise is a bit contrived to make it simpler for you. Some apps do have
+data grids like this and those can definitely suffer from these performance
+problems, but you can also imagine that each square in this app is an individual
+component in your app that's connected to the global store (either directly or
+via it's parent's connection to the store).
+
+Our 👨‍💼 product manager noticed a performance problem. Whenever you click on the
+"force render" button, the click is slow. What's frustrating about this is we've
+applied `React.memo` to all our expensive components so it's confusing why that
+update is slow when none of the components should really be re-rendering. See if
+you can figure out why and fix that by memoizing the context value.
 
 Make sure to profile before/after to see whether you actually fixed the problem.
 
@@ -60,16 +67,15 @@ Make sure to profile before/after to see whether you actually fixed the problem.
 
 After we fixed that performance problem with our app, the 👨‍💼 product manager was
 so happy because now he's confident we can fix this next performance problem.
-When you click one of the cells, it updates that individual cell. But every
-single cell in the grid re-renders when we do that. Not just the one that was
-changed!
+When you click one of the cells, it updates that individual cell. But the Grid
+itself is re-rendering as well!
 
-The reason this is happening is because all the cells consume the provider value
-and when the state changes, they need to be re-rendered. But wait... they don't
-really depend on the part of the value that's changing, right? They only need
-the `dispatch` function. So what if we put the state in one context provider and
-the `dispatch` function in another context provider? Hmm.... Give that a try and
-see if you can get things to run faster.
+The reason this is happening is because the `Grid` consumes the the provider
+value and when the state changes, that triggers a re-render of all consumers.
+But wait... the `Grid` doesn't really depend on the part of the value that's
+changing, right? It only needs the `dispatch` function. So what if we put the
+`state` in one context provider and the `dispatch` function in another context
+provider? Hmm.... Give that a try and see if you can get things to run faster.
 
 ## 🦉 Elaboration and Feedback
 
