--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -37,19 +37,6 @@ performance and maintenance of our app at the same time.
 For more on this, you can read my blogpost
 [State Colocation will make your React app faster](https://kcd.im/colocate-state).
 
-> NOTE: this is a fundamental problem with state management solutions like
-> context and redux. However, with MobX it doesn't matter how much of your app
-> state lives in a single MobX "store," your components will _only_ update when
-> the data they actually _do_ consume changes. That said, colocating state has
-> some maintenance benefits so I wouldn't recommend just putting all of your
-> state in MobX either.
->
-> Another (newer) alternative to MobX is [Recoil](https://recoiljs.org/) which
-> solves some pretty narly performance issues. I recommend giving
-> [the intro video a watch](https://www.youtube.com/watch?v=_ISAA_Jt9kI) and
-> experimenting with it for complex state management situations for which it is
-> well suited.
-
 ## Exercise
 
 Production deploys:
@@ -57,19 +44,13 @@ Production deploys:
 - [Exercise](https://react-performance.netlify.app/isolated/exercise/06.js)
 - [Final](https://react-performance.netlify.app/isolated/final/06.js)
 
-This exercise is a bit contrived to make it simpler for you. Some apps do have
-data grids like this and those can definitely suffer from these performance
-problems, but you can also imagine that each square in this app is an individual
-component in your app that's connected to the global store (either directly or
-via it's parent's connection to the store).
-
 👨‍💼 The product manager has heard complaints from users that typing in the
 `<DogInput />` is extremely slow, especially on low-end devices and when there
 are lots of elements in the data grid.
 
-We've already memoized the `<ChangingGrid />` and `<Cell />` components, but
-it's still slow. So there's still too much code running on every keystroke as
-the user types into the `<DogInput />`. As it turns out, the state that the
+We've already memoized the `<Grid />` and `<Cell />` components, but it's still
+slow. So there's still too much code running on every keystroke as the user
+types into the `<DogInput />`. As it turns out, the state that the
 `<DogInput />` is using is only needed by the `<DogInput />` and we can colocate
 that state. So let's go ahead and take that state out of the global context and
 put it within the `<DogInput />` component.
@@ -95,8 +76,8 @@ undo all your work so far and start over from scratch to implement this.
 [Production deploy](https://react-performance.netlify.app/isolated/final/06.extra-2.js)
 
 If you open up the React DevTools Profiler and click "force rerender" then
-you'll notice that the `ChangingGrid` takes quite a bit of time on its own that
-was ultimately wasted because there were no actual DOM updates.
+you'll notice that the `Grid` takes quite a bit of time on its own that was
+ultimately wasted because there were no actual DOM updates.
 
 An alternative solution is to limit the amount of work consuming components have
 to do and make it easier to determine whether a component needs to update. So we
