drastically clean up the grid stuff

--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -75,18 +75,19 @@ undo all your work so far and start over from scratch to implement this.
 
 [Production deploy](https://react-performance.netlify.app/isolated/final/06.extra-2.js)
 
-If you open up the React DevTools Profiler and click "force rerender" then
-you'll notice that the `Grid` takes quite a bit of time on its own that was
-ultimately wasted because there were no actual DOM updates.
+If you open up the React DevTools Profiler and click one of the cells then
+you'll notice that all the `Cell`s are re-rendering but only the one that was
+clicked will actually get a state update. The re-render was completely
+unnecessary.
 
 An alternative solution is to limit the amount of work consuming components have
-to do and make it easier to determine whether a component needs to update. So we
-know that the `grid` variable isn't actually changing when the `state` changes.
-The specific `cell` of the grid state is all that matters for each `Cell`
-component (remember this represents each consumer in a typical application, the
-point is they each rely on a specific portion of the state, not all of it
-necessarily), so we only need to re-render the particular `Cell` if the state it
-depends on changes.
+to do and make it easier to determine whether a component needs to update.
+Conceptually, each `Cell` in our example represents a different component you
+may have in your application. Each of those components only cares about a slice
+of the state and not all of it. Unfortunately, even though we're memoizing the
+component itself with `React.memo`, whenever we have a state update, each
+consumer needs to re-render so it can determine whether the state update was
+something that matters to it.
 
 So what if we make the `Cell` actually accept a `cell` prop and then put a
 middle-man component in there that does the actual consuming of `useAppState()`.
@@ -99,6 +100,10 @@ memoized and will therefore only re-render when `cell` changes.
 You may find it easier to just undo all your work so far and start over from
 scratch to implement this.
 
+Be sure to double-check the experience and make sure your changes are actually
+improving the situation. Sometimes this will help, and other times it doesn't do
+much to help and only leaves you with a more complex codebase for no reason!
+
 ### 3. 💯 write an HOC to get a slice of app state
 
 [Production deploy](https://react-performance.netlify.app/isolated/final/06.extra-3.js)
@@ -110,6 +115,78 @@ optimization in more places.
 
 > NOTE: this is effectively what react-redux's `connect` higher order component
 > does.
+
+### 4. 💯 Use recoil
+
+[Production deploy](https://react-performance.netlify.app/isolated/final/06.extra-4.js)
+
+All of this code optimization is fun and stuff, but honestly I'm not a big fan
+of applying these optimizations all over the place. To be clear, situations
+where you need to apply these optimizations are rare (I've written many
+applications which didn't make use of `React.memo` or `React.PureComponent` at
+all). However, there are definitely use cases where these optimizations just
+aren't enough.
+
+There's a great solution for these kinds of cases and it's perfect for what
+we're trying to do. It's called [recoil](https://recoiljs.org/).
+
+This whole time we've been pretending that each `Cell` actually represented a
+completely different component in our application that was consuming the same
+context. The optimizations we've done so far would normally be more than enough
+for this kind of scenario. But I'll bet you're wondering how we could make the
+grid faster as it is: a grid of random numbers.
+
+For this extra credit, we're going all the way back to our original
+implementation of this grid and we're going to apply a completely different
+solution. This is a little bit more tricky, so we've got a special exercise file
+to get you started. You'll want to open up `src/exercise/06.extra-1.js` and work
+in that file.
+[Here's the isolated page for that file](http://localhost:3000/isolated/exercise/06.extra-4.js).
+
+The point of this exercise isn't necessarily for you to learn recoil, so Marty
+💰 has helped you out with a bit of code for it. The point is to teach you
+what's possible with recoil and the kinds of problems it's well suited for so
+you know when to reach for it in your own applications (definitely don't use it
+for everything). So spend a lot of your time in the DevTools and compare
+before/after.
+
+Here's a quick example of how to use the parts of recoil that you'll need to
+know:
+
+```javascript
+const initialElements = {
+  '123': 456,
+}
+const elementPositionStateFamily = atomFamily({
+  key: 'ElementPosition',
+  default: ({elementId}) => initialElements[elementId],
+})
+
+function ElementListItem({elementID}) {
+  const [position, setPosition] = useRecoilState(
+    elementPositionStateFamily({elementID}),
+  )
+  const handleClick = () =>
+    setPosition(previousPosition => previousPosition + 10)
+  return (
+    <div>
+      Element: {elementID}
+      Position: {position}
+      <button onClick={handleClick}>Change Position</button>
+    </div>
+  )
+}
+
+function App() {
+  return (
+    <RecoilRoot>
+      <ElementListItem elementId="123" />
+    </RecoilRoot>
+  )
+}
+```
+
+📜 Learn more about Recoil from [the docs](https://recoiljs.org/).
 
 ## 🦉 Elaboration and Feedback
 
