--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -71,7 +71,7 @@ function MyListOfData({items}) {
 
   return (
     <ul ref={listRef} style={{display: 'relative', height: 300}}>
-      <li style={{height: totalHeight}} />
+      <li style={{height: rowVirtualizer.totalSize}} />
       {rowVirtualizer.virtualItems.map(({index, size, start}) => {
         const item = items[index]
         return (
@@ -98,7 +98,7 @@ function MyListOfData({items}) {
 In summary, rather than iterating over all the items in your list, you simply
 tell `useVirtual` how many rows are in your list, give it a callback that it can
 use to determine what size they each should be, and then it will give you back
-`virtualRows` and a `totalHeight` which you can then use to only render the
+`virtualItems` and a `totalSize` which you can then use to only render the
 items the user should be able to see within the window.
 
 [react-virtual](https://github.com/tannerlinsley/react-virtual) has some really
