replace "DogInput" with "DogNameInput"

--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -45,15 +45,15 @@ Production deploys:
 - [Final](https://react-performance.netlify.app/isolated/final/06.js)
 
 👨‍💼 The product manager has heard complaints from users that typing in the
-`<DogInput />` is extremely slow, especially on low-end devices and when there
-are lots of elements in the data grid.
+`<DogNameInput />` is extremely slow, especially on low-end devices and when
+there are lots of elements in the data grid.
 
 We've already memoized the `<Grid />` and `<Cell />` components, but it's still
 slow. So there's still too much code running on every keystroke as the user
-types into the `<DogInput />`. As it turns out, the state that the
-`<DogInput />` is using is only needed by the `<DogInput />` and we can colocate
-that state. So let's go ahead and take that state out of the global context and
-put it within the `<DogInput />` component.
+types into the `<DogNameInput />`. As it turns out, the state that the
+`<DogNameInput />` is using is only needed by the `<DogNameInput />` and we can
+colocate that state. So let's go ahead and take that state out of the global
+context and put it within the `<DogNameInput />` component.
 
 ## Extra Credit
 
@@ -61,12 +61,12 @@ put it within the `<DogInput />` component.
 
 [Production deploy](https://react-performance.netlify.app/isolated/final/06.extra-1.js)
 
-Let's say that the state in the `<DogInput />` _does_ need to be global because
-it's accessed by many components in the app. So what do we do? Well, another way
-to solve this is by separating our app's state logically into domain-specific
-context providers. So we can put the state for the dog input and the state for
-the rest of our app in different context providers and when the dog input
-updates, the grid doesn't need to update.
+Let's say that the state in the `<DogNameInput />` _does_ need to be global
+because it's accessed by many components in the app. So what do we do? Well,
+another way to solve this is by separating our app's state logically into
+domain-specific context providers. So we can put the state for the dog input and
+the state for the rest of our app in different context providers and when the
+dog input updates, the grid doesn't need to update.
 
 So for this extra credit, try to make that work. You may find it easier to just
 undo all your work so far and start over from scratch to implement this.
